--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         <div class="container">
             <div class="row body-page">
                 <div class="col-md-8 col-offset-2 about-me">
+                    <div class="card">
+                        <div class="card-body">
+                          This is some text within a card body.
+                        </div>
+                      </div>
 
                 </div>
             </div>
