adding content inside card

--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
                 <div class="col-md-8 col-offset-2 about-me">
                     <div class="card">
                         <div class="card-body">
-                          This is some text within a card body.
+                            <h3>About Me</h3>
+                            <img src="assets/image.JPG" height= "250" width="192" align="left" alt="Lauren as a bridesmaid"> 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio fugit consectetur 
+                            repellendus architecto. Enim, ab? Ex, beatae? Officia ipsa in eos, hic 
+                            aspernatur id repellendus beatae cupiditate voluptatem veritatis optio 
+                            dicta ducimus magni commodi quam repudiandae amet exercitationem maxime fuga,
+                             ex vitae illo dolore! Aperiam eligendi consequuntur cumque ex ullam fugit 
+                             accusamus doloribus tenetur in quod iure animi delectus, illo cupiditate est
+                              dolore itaque quo! Minus quis soluta, inventore qui aliquam minima nostrum 
+                              vel deleniti voluptatem cupiditate
                         </div>
                       </div>
 
