--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="index.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -49,7 +49,7 @@
         </div>
         <div class="container">
             <div class="row body-page">
-                <div class="col-md-8 col-offset-2 about-me">
+                <div class="col-md-8 about-me">
                     <div class="card">
                         <div class="card-body">
                             <h3>About Me</h3>
