--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <div class="col-md-3">
                 <h1 class="nav_name">Lauren</h1>
             </div>
-            <div class="col-md-8 offset-md-2">
+            <div class="col-md-9">
                 <nav class="navbar navbar-expand-md navbar-light bg-white">
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
