--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,18 @@
                 </nav>
             </div>
         </div>
+            <div class="row content-row1">
+                <div class="col-md-6">
+                    <div class="card bg-transparent border-none text-white">
+                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
     </div>
 </body>
 
