--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,48 @@
             </div>
         </div>
             <div class="row content-row1">
-                <div class="col-md-6">
+                <div class="col-md-5 offset-md-1">
                     <div class="card bg-transparent border-none text-white">
                         <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
                         <div class="card-img-overlay">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text">Last updated 3 mins ago</p>
+                          <h5 class="card-title">Word Guess</h5>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="card bg-transparent border-none text-white">
+                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                          <h5 class="card-title">RPG Game</h5>
+                        </div>
+                      </div>
+
+                </div>
+            </div>
+            <div class="row content-row2">
+                <div class="col-md-5 offset-md-1">
+                    <div class="card bg-transparent border-none text-white">
+                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                          <h5 class="card-title">Trivia Game</h5>
+                        </div>
+                      </div>
+                    </div>
+                <div class="col-md-5">
+                    <div class="card bg-transparent border-none text-white">
+                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                          <h5 class="card-title">Info Widget</h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="row content-row3">
+                <div class="col-md-5 offset-md-1">
+                    <div class="card bg-transparent border-none text-white">
+                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                          <h5 class="card-title">Rock Paper Scissors</h5>
                         </div>
                       </div>
                 </div>
