--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,9 @@
                 </nav>
             </div>
         </div>
+    </div>
+    <div class="containerPortfolio">
+        <h1 class="portfolioTitle">Portfolio</h1>
             <div class="row content-row1">
                 <div class="col-md-5 offset-md-1">
                     <div class="card bg-transparent border-none text-white">
