assigned flex to nav bar for when observing on an iphone

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <div class="col-md-3">
                 <h1 class="nav_name">Lauren</h1>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9 nav_bar">
                 <nav class="navbar navbar-expand-md navbar-light bg-white">
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
