--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,7 @@
     </div>
     <div class="containerPortfolio">
         <h1 class="portfolioTitle">Portfolio</h1>
+        <hr width="95%">
             <div class="row content-row1">
                 <div class="col-md-5 offset-md-1">
                     <div class="card bg-transparent border-none text-white">
