Adding fontawesome copyright to footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="contact.html" />
     <link rel="stylesheet" href="portfolio.html" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -64,6 +65,16 @@
                               vel deleniti voluptatem cupiditate
                         </div>
                       </div>
+                      <div class="container-footer">
+                        <div class="row-nav">
+                            <div class="col-md-12 nav_barFooter">
+                                <nav class="navbar-footer fixed-bottom">
+                                    <h6><i class="far fa-copyright"></i>Copyright</h6>
+                                  </nav>
+                            </div>
+                        </div>
+
+                    </div>
 
                 </div>
             </div>
