updated with two projects and added img folder

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h3>About Me</h3>
-                            <img src="assets/image.JPG" height= "250" width="192" align="left" alt="Lauren as a bridesmaid"> 
+                            <img src="./assets/img/image.JPG" height= "250" width="192" align="left" alt="Lauren as a bridesmaid"> 
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio fugit consectetur 
                             repellendus architecto. Enim, ab? Ex, beatae? Officia ipsa in eos, hic 
                             aspernatur id repellendus beatae cupiditate voluptatem veritatis optio 
