--- a/portfolio.html
+++ b/portfolio.html
@@ -53,18 +53,23 @@
     <hr width="95%">
             <div class="row content-row1">
                 <div class="col-md-5 offset-md-1">
-                    <div class="card bg-transparent border-none text-white">
-                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                    <div class="card bg-transparent border-none text-white" id="projectOne">
+                        <a href=" https://dylanhulbert.github.io/project-01/" style="display:block" target="_blank">
+                        <img src="./assets/img/projectOne.png" height="300" width="463" alt="Explore Cascadia"/>
+                        </a>
                         <div class="card-img-overlay">
-                          <h5 class="card-title">Word Guess</h5>
+                          <h5 class="card-title">Explore Cascadia</h5>
                         </div>
                       </div>
                 </div>
                 <div class="col-md-5">
                     <div class="card bg-transparent border-none text-white">
-                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <a href="https://laurendoss.github.io/WeatherAPI/" style="display: block" target="_blank">
+                        <img src="./assets/img/WeatherAPI.png" height="300" width="463"alt="Weather API">
+                        </a>
+                        <!-- <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="..."> -->
                         <div class="card-img-overlay">
-                          <h5 class="card-title">RPG Game</h5>
+                          <h5 class="card-title">Weather API</h5>
                         </div>
                       </div>
 
