updated to include exploreCascadia.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
             <div class="row content-row1">
                 <div class="col-md-5 offset-md-1">
                     <div class="card bg-transparent border-none text-white" id="projectOne">
-                        <a href=" https://dylanhulbert.github.io/project-01/" style="display:block" target="_blank">
+                        <a href="exploreCascadia.html" style="display:block">
                         <img src="./assets/img/projectOne.png" height="300" width="463" alt="Explore Cascadia"/>
                         </a>
                         <div class="card-img-overlay">
