updated to include weatherAPI.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="card bg-transparent border-none text-white">
-                        <a href="https://laurendoss.github.io/WeatherAPI/" style="display: block" target="_blank">
+                        <a href="weatherAPI.html" style="display: block">
                         <img src="./assets/img/WeatherAPI.png" height="300" width="463"alt="Weather API">
                         </a>
                         <!-- <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="..."> -->
