updated forms to include contact information and about me

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,22 @@
                 </nav>
             </div>
         </div>
+
         <div class="row">
-            <div class="col-md-6">
-                <form>
+            
+                <div class="col-md-8 about-me">
+                    <div class="card">
+                      <div class="card-body" style="margin-right: 210px;">
+                          <h3>Contact Information</h3>
+                          Below you can find links to my Resume, LinkedIn, and GitHub:  
+                            <h6><a class="nav-link" id="contactLinks" href="" target="_blank">Resume</a></h6>
+                            <h6><a class="nav-link" id="contactLinks" href="https://www.linkedin.com/in/laurendoss/" target="_blank">LinkedIn</a></h6>
+                            <h6><a class="nav-link" id="contactLinks" href="https://github.com/laurendoss" target="_blank">GitHub</a></h6>
+
+                    
+                    </div>
+                    </div>
+                <!-- <form>
                     <h3>Contact</h3>
                     <div class="form-group flex-direction-column">
                         <label for="exampleFormControlInput1">Name</label>
@@ -60,7 +73,7 @@
                       <label for="exampleFormControlTextarea1">Message</label>
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea><br>
                       <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+                    </form> -->
                     <div class="container-footer">
                         <div class="row-nav">
                             <div class="col-md-12 nav_barFooter">
