--- a/portfolio.html
+++ b/portfolio.html
@@ -78,15 +78,17 @@
             <div class="row content-row2">
                 <div class="col-md-5 offset-md-1">
                     <div class="card bg-transparent border-none text-white">
-                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <a href="codeQuiz.html" style="display:block">
+                        <img src="https://picsum.photos/200/300" height="300" width="463" class="card-img" alt="...">
+                    </a>
                         <div class="card-img-overlay">
-                          <h5 class="card-title">Trivia Game</h5>
+                          <h5 class="card-title">Code Quiz</h5>
                         </div>
                       </div>
                     </div>
                 <div class="col-md-5">
                     <div class="card bg-transparent border-none text-white">
-                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <img src="https://picsum.photos/200/300" height="300" width="463" class="card-img" alt="...">
                         <div class="card-img-overlay">
                           <h5 class="card-title">Info Widget</h5>
                         </div>
@@ -96,7 +98,7 @@
             <div class="row content-row3">
                 <div class="col-md-5 offset-md-1">
                     <div class="card bg-transparent border-none text-white">
-                        <img src="https://picsum.photos/200/300" height="300" width="400" class="card-img" alt="...">
+                        <img src="https://picsum.photos/200/300" height="300" width="463" class="card-img" alt="...">
                         <div class="card-img-overlay">
                           <h5 class="card-title">Rock Paper Scissors</h5>
                         </div>
