updated to fix typos

--- a/codeQuiz.html
+++ b/codeQuiz.html
@@ -60,7 +60,7 @@
                             I got a lot of practice with conditional statements, functions, and arrays. I also worked with scope in 
                             terms of defining variables and utilizing them in functions.
                          <br>
-                         I am currently re-vamping this project to improve both the functionality and the css. Once the CSS has been better updated, 
+                         I am currently re-vamping this project to improve both the functionality and the CSS. Once the CSS has been better updated, 
                          a screenshot will be added. 
                          <br>
                          Below you can find links to the Deployed Project and the GitHub Repository:
